Crash on export UV Layout #69498

Closed
opened 2019-09-04 18:23:12 +02:00 by Daniel Salazar · 9 comments
Member

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-04 00:01, hash: da25aca267

Short description of error
Export UV Layout operator crashed Blender

Exact steps for others to reproduce the error
With default cube selected
Enter edit mode
Open a UV Editor
Go to UV/Export UV Layout
Hit the Export button
Crash

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.81 (sub 5), branch: master, commit date: 2019-09-04 00:01, hash: `da25aca267` **Short description of error** Export UV Layout operator crashed Blender **Exact steps for others to reproduce the error** With default cube selected Enter edit mode Open a UV Editor Go to UV/Export UV Layout Hit the Export button Crash
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

#69559 was marked as duplicate of this issue

#69559 was marked as duplicate of this issue
Daniel Salazar changed title from Crash on expoprt UV Layout to Crash on export UV Layout 2019-09-04 19:28:13 +02:00

Added subscriber: @GpuDevil

Added subscriber: @GpuDevil

Here's a backtrace from LLDB - looks like there's no GPU context active when trying to create a texture to render the UV image to.

backtrace.txt

Here's a backtrace from LLDB - looks like there's no GPU context active when trying to create a texture to render the UV image to. [backtrace.txt](https://archive.blender.org/developer/F7717687/backtrace.txt)
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

was not the case before the new FileBrowser landed afaict.
@JulianEisel : mind checking?

was not the case before the new FileBrowser landed afaict. @JulianEisel : mind checking?
Author
Member

Added subscriber: @pq

Added subscriber: @pq

This issue was referenced by 4c4a8bf588

This issue was referenced by 4c4a8bf588c52e05f868a89938fa09e6f25ba1d8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Julian Eisel self-assigned this 2019-09-06 00:15:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69498
No description provided.