Fix T69498: Crash on export UV Layout

Ensure there's a drawable context after the file browser window is
destroyed.