source/blender/windowmanager/intern/wm_files.c
@@ -1240,9 +1240,6 @@ static ImBuf *blend_file_thumb(const bContext *C,
   /* gets scaled to BLEN_THUMB_SIZE */
   Depsgraph *depsgraph = CTX_data_ensure_evaluated_depsgraph(C);
 
-  /* Offscreen drawing requires a drawable window context. */
-  wm_window_make_drawable(wm, CTX_wm_window(C));
-
   if (scene->camera) {
     ibuf = ED_view3d_draw_offscreen_imbuf_simple(depsgraph,
                                                  scene,
